--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,14 @@ plugins {
 	id 'java'
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.sprite.concurso.ConcursoSpriteApplication'
+        )
+    }
+}
+
 apply plugin: 'idea'
 apply plugin: 'io.spring.dependency-management'
 
